<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="130dp"
    android:background="#15B7A6"
    tools:context=".Result"
    android:id="@+id/result">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="COMPLETED"
            android:textColor="#fef9ef"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTotalScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="6/10"
            android:textColor="#FFCB77"
            android:textSize="90sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTotalScore"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="#fef9ef"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="You earned 200 points!" />

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/btnNewQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#2b2d42"
        android:padding="8dp"
        android:textColor="#fef9ef"
        android:text="Take New Quiz" />

    <android.widget.Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#2b2d42"
        android:padding="8dp"
        android:text="HOME"
        android:textColor="#fef9ef"/>
</LinearLayout>