...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD899"
    tools:context=".MainActivity"
    android:id="@+id/home">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/trivia_quiz_game" />
        </RelativeLayout>

        <android.widget.Button
            android:id="@+id/buttonPlayGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="10dp"
...
